[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "ZBus Secret Service credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["zbus", "secret-service", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/zbus-secret-service-keyring-store.git"
rust-version = "1.88"
exclude = [".github/"]
readme = "README.md"
name = "zbus-secret-service-keyring-store"
version = "0.3.1"
edition = "2024"

[features]
crypto-rust = ["secret-service/crypto-rust"]
crypto-openssl = ["secret-service/crypto-openssl"]
rt-async-io-crypto-rust = ["secret-service/rt-async-io-crypto-rust"]
rt-async-io-crypto-openssl = ["secret-service/rt-async-io-crypto-openssl"]
rt-tokio-crypto-rust = ["secret-service/rt-tokio-crypto-rust"]
rt-tokio-crypto-openssl = ["secret-service/rt-tokio-crypto-openssl"]

[dependencies]
keyring-core = { version = "0.7.2" }
secret-service = { version = "5.1.0" }
zbus = "5.13.2"

[dev-dependencies]
fastrand = "2.3.0"
regex = "1.12.3"
sscanf = "0.4.4"

[package.metadata.docs.rs]
features = ["crypto-rust"]
targets = ["x86_64-unknown-linux-gnu"]
