[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "ZBus Secret Service credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["zbus", "secret-service", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/zbus-secret-service-keyring-store.git"
rust-version = "1.88"
exclude = [".github/"]
readme = "README.md"
name = "zbus-secret-service-keyring-store"
version = "1.0.0"
edition = "2024"

[features]
crypto-rust = ["secret-service/crypto-rust"]
crypto-openssl = ["secret-service/crypto-openssl"]
rt-async-io-crypto-rust = ["secret-service/rt-async-io-crypto-rust"]
rt-async-io-crypto-openssl = ["secret-service/rt-async-io-crypto-openssl"]
rt-tokio-crypto-rust = ["secret-service/rt-tokio-crypto-rust"]
rt-tokio-crypto-openssl = ["secret-service/rt-tokio-crypto-openssl"]

[dependencies]
keyring-core = { version = "1" }
secret-service = { version = "5.1" }
zbus = "5.14"

[dev-dependencies]
fastrand = "2.4"
regex = "1.12"
sscanf = "0.5"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["crypto-rust"]
